# hiwma-chatbot

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  smoke_test.py
chatbot/: README.md  __init__.py  config.py
chatbot/api/: __init__.py  chat_history.py  main.py  models.py
chatbot/api/routes/: chat.py  documents.py  health.py
chatbot/api/services/: orchestrator.py
chatbot/frontend/: README.md  chat.js  index.html  styles.css  widget-demo.html  widget.js
chatbot/ingestion/: __init__.py  chunker.py  cli.py  embedder.py  parser.py  store.py
chatbot/llm_gateway/: __init__.py  anthropic_llm.py  base.py  factory.py  google_llm.py  groq_llm.py  ollama_llm.py  openai_llm.py  prompt_templates.py
chatbot/retriever/: __init__.py  base.py  context_formatter.py  factory.py  hybrid_retriever.py  keyword_retriever.py  vector_retriever.py
tests/: README.md
tests/api/: test_chat_history.py  test_models.py  test_orchestrator.py  test_routes.py
tests/ingestion/: test_chunker.py  test_config.py  test_parser.py  test_store.py
tests/llm_gateway/: __init__.py  test_anthropic_llm.py  test_factory.py  test_google_llm.py  test_groq_llm.py  test_ollama_llm.py  test_openai_llm.py  test_prompt_templates.py
tests/retriever/: test_context_formatter.py  test_factory.py  test_hybrid_retriever.py  test_keyword_retriever.py  test_vector_retriever.py
