[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "waste-management-chatbot"
version = "0.1.0"
description = "A production-grade, generic RAG chatbot pipeline for waste management technical books"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # PDF Parsing
    "pymupdf>=1.25.0",
    # Embeddings (free, local)
    "sentence-transformers>=3.0",
    # Vector Database (free, file-based)
    "chromadb>=0.5.0",
    # Configuration
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8.0",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
]
llm = [
    "groq>=0.12",
    "google-genai>=1.0",
    "openai>=1.50",
    "anthropic>=0.40",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
